      event handler without accepting event.
    * [156484] Fixed lastWindowClosed() being emited for each top
      level window when calling QApplication::closeAllWindows().
    * [157667] Fixed widgets with Qt::WA_DeleteOnClose to be properly
      deleted when they are closed in the dropEvent() handler when the
      drag was started in the same application.

- QAtomic
    * [126321] Fixed several flaws in the inline assembler implementations
      for several architectures (ARM, i386, PowerPC, x86-64).
    * [133043] Added support for atomic fetch-and-add.

- QAuthenticator
    * New Class. Needed for authentication support in the Network module.
      Currently supports the Basic, Digest-Md5 and Ntlm authentication mechanisms.

- QBitArray
    * [158816] Fix crash in operator~()

- QAuthenticator
    * New class; added support for complex authenticators.

- QCalendarWidget
    * Don't set maximum width for month/year buttons
    * Use QPalette::Text role for default text
    * date edit feature added, dateEditEnabled and dateEditAcceptDelay properties added
    * [137031] Grid lines are drawn properly when headers are not visible.
    * [151828] the language can be set with QCalendarWidget::setLocale()

- QColorDialog
    * [131160] The color dialog now on Mac OS X can now get an alpha color as well.

- QChar
    * Updated the Unicode tables to Unicode 5.0
    * Added foldCase() and toTitleCase() methods.
    * Added public API to handle the full Unicode range.


- QColor
    * [140150] Fixed bug where QColor::isValid() would return true for certain
      invalid color strings.
    * [120367] Added QColor::setAllowX11ColorNames(bool), which allows
      applications to use X11 color names.
    * Fixed internal errors in toHsv() due to inexact float comparisions.

- QCoreApplication
    * Added support for posted event priorities.
    * [34019] Added QCoreApplication::removePostedEvents() overload
      for removing events of a specific type.