@@ -2126,6 +2126,7 @@ void QApplication::setActiveWindow(QWidget* act)
         }
     }
 
+    QWidget *previousActiveWindow =  QApplicationPrivate::active_window;
     QApplicationPrivate::active_window = window;
 
     if (QApplicationPrivate::active_window) {
@@ -2146,6 +2147,14 @@ void QApplication::setActiveWindow(QWidget* act)
     QEvent activationChange(QEvent::ActivationChange);
     QEvent windowActivate(QEvent::WindowActivate);
     QEvent windowDeactivate(QEvent::WindowDeactivate);
+
+#if !defined(Q_WS_MAC)
+    if (!previousActiveWindow) {
+        QEvent appActivate(QEvent::ApplicationActivate);
+        sendSpontaneousEvent(qApp, &appActivate);
+    }
+#endif
+
     for (int i = 0; i < toBeActivated.size(); ++i) {
         QWidget *w = toBeActivated.at(i);
         sendSpontaneousEvent(w, &windowActivate);
@@ -2157,6 +2166,13 @@ void QApplication::setActiveWindow(QWidget* act)
         sendSpontaneousEvent(w, &windowDeactivate);
         sendSpontaneousEvent(w, &activationChange);
     }
+
+#if !defined(Q_WS_MAC)
+    if (!QApplicationPrivate::active_window) {
+        QEvent appDeactivate(QEvent::ApplicationDeactivate);
+        sendSpontaneousEvent(qApp, &appDeactivate);
+    }
+#endif
 
     if (QApplicationPrivate::popupWidgets == 0) { // !inPopupMode()
         // then focus events
